# ascribe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/guide/: app.md  artifacts.md  cli.md  concepts.md  faq.md  getting-started.md  workflows.md
docs/js/: diagrams-nav.js
docs/metadata/: stability.yml
docs/stylesheets/: extra.css
src/app/: __init__.py  charts.py  data.py  main.py
src/app/ui/: __init__.py  app.py  header.py  helpers.py  runs.py
src/crv/: README.md
src/crv/core/: AGENTS.md  README.md  __init__.py  constants.py  core.ebnf  errors.py  grammar.py  hashing.py  ids.py  schema.py  serde.py  tables.py  typing.py  versioning.py
src/crv/core/tables/: __init__.py  decisions.py  exchange.py  holdings.py  holdings_valuation.py  identity_edges.py  messages.py  oracle_calls.py  scenarios_seen.py
src/crv/io/: README.md  __init__.py  artifacts.py  config.py  dataset.py  errors.py  fs.py  manifest.py  paths.py  read.py  run_manifest.py  validate.py  write.py
src/crv/lab/: README.md  __init__.py  cli.py  policy_builder.py  survey.py
src/crv/mind/: README.md  __init__.py
src/crv/viz/: README.md  __init__.py
src/crv/world/: README.md  __init__.py  events.py
tests/: test_edsl_policy.py  test_init.py  test_step.py  test_viz_specs.py
tests/app/: test_charts_identity_and_sampling.py  test_helpers_module.py  test_main_cli.py  test_runs_module.py
tests/core/: test_grammar_naming.py  test_grammar_sync.py  test_hashing_serde.py  test_schema_decision.py  test_schema_exchange.py  test_schema_graphedit.py  test_schema_identity_edges.py  test_schema_visibility.py  test_tables_descriptors.py  test_versioning.py  test_versioning_constants.py
tests/io/: test_config_precedence.py  test_holdings_and_valuation_write_and_manifest.py  test_paths_bucket_math.py  test_run_manifest_contract.py  test_run_manifest_indexes.py  test_validation_and_dag.py  test_validation_more.py  test_write_append_and_manifest.py
tools/: build_docs.py  docs_llms.py  generate_docs.sh  generate_ebnf_md.py
tools/ebnf/: package-lock.json  package.json
