[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crv-abm"
version = "0.1.0"
description = "Context→Representation→Valuation (CRV) agent-based model using Mesa and Polars"
authors = [{name = "Ari Dyckovsky", email = "aridyckovsky@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
dependencies = [
  "mesa>=3.3.0",
  "polars>=1.33",
  "numpy>=1.26.0",
  "typing-extensions>=4.9.0",
  "edsl>=0.1.0",
  "altair>=5.5.0",
  "vl-convert-python>=1.6.0",
  "matplotlib>=3.9.2",
  "dspy>=3.0.3",
  "python-dotenv>=1.1.1",
  "networkx>=3.5",
  "requests>=2.32.3",
  "vegafusion>=2.0.2",
  "streamlit>=1.49.1",
  "pydantic>=2.11.9",
  "pyarrow>=21",
  "fsspec>=2025.9.0",
]

[project.urls]
Homepage = "https://github.com/aridyckovsky/crv_agents"

[project.scripts]
crv-abm-sim = "crv.world.sim:main"
crv-abm-sweep = "crv.world.sweep:main"
crv-viz-report = "crv.viz.dashboards:cli_report"
crv-lab = "crv.lab.cli:main"
crv-app = "app.main:main"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.25,<0.31",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6"
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-requests",
  "requests-mock>=1.12.1",
]
docs = [
  "crv-abm[docs]",
]

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

# Configure Hatch build to include our src packages and grammar
[tool.hatch.build.targets.wheel]
packages = [
  "src/crv",
  "src/app",
]
include = [
  "src/crv/core/core.ebnf",
]
